Fixed results errors and added spacing

--- a/public/assets/css/app.scss
+++ b/public/assets/css/app.scss
@@ -531,3 +531,7 @@ footer {
     color: lighten(#212121,20%);
   }
 }
+
+.r-total {
+  margin-right: 20px;
+}
